# sv_assignment

./: .gitignore  .gitmodules  CMakeLists.txt  DECISIONS.md  DESIGN.md  OPERATIONS.md  PERF.md  README.md  build.sh  docker-compose.yml  run_init_step.sh  run_kill_agent.sh  run_logs.sh  run_step0.sh  run_stop.sh  test_epoll_scale.sh  추가질의문답(좋은코드란).md
asset/: asan_ubsan.log_
asset/시연/: 시나리오2_부분실패.webm
config/: README.md  agent_config.json  controller_config.json
configs/: agents.json  policy.json
docker/: agent.Dockerfile  camera.Dockerfile  controller.Dockerfile  docker-compose.yml  imu.Dockerfile  lidar.Dockerfile  pc.Dockerfile  sync_board.Dockerfile
docs/: DESIGN.md  PERF.md  README.md  SUBMODULE_GUIDE.md
scripts/: build.sh  fault_injector.py  perf_bench.sh  run_init_step.sh  run_sanitizers.sh
src/: CMakeLists.txt
src/agent/: CMakeLists.txt  Dockerfile
src/agent/include/: main.h
src/agent/src/: main.cpp
src/controller/: CMakeLists.txt  Dockerfile
src/controller/include/: main.h
src/controller/src/: main.cpp
tests/: CMakeLists.txt
tests/integration/: test_scenario3.sh  test_scenarios.sh
tests/unit/: CMakeLists.txt  test_cmd_set_mode_ack.cpp  test_logger.cpp  test_memory_pool.cpp  test_policy_engine.cpp
